--- a/config.json
+++ b/config.json
@@ -7,9 +7,9 @@
 	},
 
 	"production": {
-		"host": "18.216.172.187",
+		"host": "localhost",
 		"port": 8587,
-		"baseURL": "http://18.216.172.187:8587",
-		"apiServer": "http://18.216.172.187:5050"
+		"baseURL": "http://localhost:8587",
+		"apiServer": "http://localhost:5050"
 	}
 }
